feat: add pipeline-env-ts-plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "container-env-ts-template"]
 	path = container-env-ts-template
 	url = https://github.com/stack-spot/container-env-ts-template
+[submodule "pipeline-env-ts-plugin"]
+	path = pipeline-env-ts-plugin
+	url = https://github.com/stack-spot/pipeline-env-ts-plugin.git
