stk-cli: added https://github.com/stack-spot/skynet-sre-ts-catalog template to stack

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cdk-env-ts-template"]
 	path = cdk-env-ts-template
 	url = https://github.com/stack-spot/cdk-env-ts-template.git
+[submodule "skynet-sre-ts-catalog"]
+	path = skynet-sre-ts-catalog
+	url = https://github.com/stack-spot/skynet-sre-ts-catalog
