--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "skynet-sre-ts-catalog"]
 	path = skynet-sre-ts-catalog
 	url = https://github.com/stack-spot/skynet-sre-ts-catalog
+[submodule "sns-env-ts-plugin"]
+	path = sns-env-ts-plugin
+	url = https://github.com/stack-spot/sns-env-ts-plugin.git
